# zksync-era

.github/workflows/: ci-core-reusable.yml
checks-config/: era.dic
core/: CHANGELOG.md
core/lib/dal/src/: lib.rs
core/lib/prover_interface/src/: api.rs  outputs.rs
core/lib/prover_interface/tests/: job_serialization.rs
core/node/metadata_calculator/src/: updater.rs
core/node/node_framework/: Cargo.toml
core/node/node_framework/examples/: showcase.rs
core/node/node_framework/src/: precondition.rs  task.rs
core/node/node_framework/src/implementations/layers/: circuit_breaker_checker.rs  mod.rs  (+13 more)
core/node/node_framework/src/service/: tests.rs
core/node/proof_data_handler/src/: request_processor.rs
core/node/vm_runner/src/: lib.rs
zk_toolbox/: Cargo.toml
zk_toolbox/crates/common/: Cargo.toml
zk_toolbox/crates/common/src/: cmd.rs  db.rs  prerequisites.rs
zk_toolbox/crates/common/src/term/: logger.rs
zk_toolbox/crates/zk_inception/: Cargo.toml
zk_toolbox/crates/zk_inception/src/: consts.rs  lib.rs  main.rs
zk_toolbox/crates/zk_inception/src/configs/: chain.rs  ecosystem.rs  manipulations.rs  secrets.rs
zk_toolbox/crates/zk_supervisor/: Cargo.toml
zk_toolbox/crates/zk_supervisor/src/: dals.rs  lib.rs  main.rs
zk_toolbox/crates/zk_supervisor/src/commands/database/: check_sqlx_data.rs  drop.rs  migrate.rs  mod.rs  new_migration.rs  prepare.rs  reset.rs  setup.rs  wait.rs
zk_toolbox/crates/zk_supervisor/src/commands/database/args/: check_sqlx_data.rs  drop.rs  migrate.rs  mod.rs  new_migration.rs  prepare.rs  reset.rs  setup.rs  wait.rs
(+9 files in other folders)
