[package]
name = "zk_supervisor"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "zk_supervisor"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
common.workspace = true
human-panic.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
xshell.workspace = true
zk_inception.workspace = true
